--- a/templates/StringForm.html
+++ b/templates/StringForm.html
@@ -5,54 +5,94 @@
 <head>
     <meta charset="utf-8" />
     <title>RegGenerator</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+
 	<style>
-		body {
-    	background-color: #F0F0F0;
-    	font-family: Arial;
-    	margin: 0px;
-    	}
-    	* {
-    font-size: 15px;
-    line-height: 1.5;
-    font-family: 'Nunito', sans-serif;
-}
+		*{
+			background: #fff;
+			font-family: 'Roboto', sans-serif;
+			font-size: 16px;
+		}
+		.wrapper{
+			max-width: 800px;
+			margin: 0 auto;
+		}
+		.main-heading{
+			font-size: 25px;
+			color: #218838;
+			margin-bottom: 0px;
+			padding: 20px;
+		}
+		.margin-top-20{
+			margin-top: 20px;
+		}
+		.margin-bottom-10{
+			margin-bottom: -10px;
+		}
+		.inline-block{
+			display: inline-block;
+		}
 	</style>
 </head>
 <body>
 	<div class="container">
-		<div class="row">
-			<div class="col-sm-12 col-md-12 col-lg-12">
-				<div class="heading text-center" style="padding-top:10px;margin-bottom:10px">
-					<h1 style="color:green">RegGenerator</h1>
+		<div class="wrapper">
+			<div class="row">
+				<div class="col-sm-12 col-md-12 col-lg-12">
+					<div class="heading text-center">
+						<h1 class="main-heading">RegGenerator</h1>
+					</div>
 				</div>
+			</div>
+			<div class="row">
 				<div class="col-sm-12 col-md-12 col-lg-12">
 					<form method="post">
-						<div class="form-group text-center">
-							<label for="string" class="sr-only">Enter the String</label>
-							<input style="width:100%; height:45px" name="string" type="text" placeholder=" Enter String here..." required/>
-						</div>
-						<div class="row col-sm-12 col-md-12 col-lg-12">
-							<div class="col-sm-2 col-md-2 col-lg-2">
-								<button type="submit" class="btn btn-success" name="normal_regex"  value="normal_regex">Normal Regex</button>
+						<div class="row">
+							<div class="col-sm-12 col-md-12 col-lg-12">
+								<div class="form-group">
+									<label for="string" class="sr-only">Enter the String</label>
+									<input name="string" type="text" class="form-control" id="string"  placeholder=" Enter String here..." required/>
+								</div>
 							</div>
-							<div class="col-sm-3 col-md-3 col-lg-3" style="margin-left:-30px">
+							<div class="col-sm-12 col-md-12 col-lg-12">
+								<button type="submit" class="btn btn-success" name="normal_regex"  value="normal_regex">Normal Regex</button>
 								<button type="submit" class="btn btn-primary" name="normal_regex" value="myra_regex">Myra Regex</button>
 							</div>
 						</div>
 					</form>
-					<div class="col-sm-12 col-md-12 col-lg-12">
-						<div class="heading text-center" style="padding-top:10px;margin-bottom:10px">
-							<h3>Generated Regex</h3>
-						</div>
-						<div><h3>Original String:</h3>
-							<p>{{ originalString }}</p>
-						</div>
-						<div>
-							<textarea rows="4" cols="147" readonly id="textarea">{{ regexGenerated }}</textarea>
-							<button onclick="copy()">Copy To Clipboard</button>
-							<button><a href="https://regexr.com/" target="_blank" style="color:black;text-decoration:none">Validate Here</a></button>
-						</div>
+				</div>
+			</div>
+			<div class="row">
+
+				<!--<div class="col-sm-12 col-md-12 col-lg-12">-->
+					<!--<div class="heading text-center">-->
+						<!--<div class="inline-block">Original String:</div>-->
+						<!--<span>{{ originalString }}</span>-->
+					<!--</div>-->
+				<!--</div>-->
+			</div>
+			<div class="row">
+				<div class="col-sm-12 col-md-12 col-lg-12">
+					<div class="heading text-center">
+						<h3 class="main-heading margin-top-20 margin-bottom-10">Original String</h3>
 					</div>
+				</div>
+				<div class="col-sm-12 col-md-12 col-lg-12">
+					<textarea style="width: 100%; margin-top: 20px" rows="3" cols="50" readonly id="textarea_original">{{ originalString }}</textarea>
+				</div>
+				<div class="col-sm-12 col-md-12 col-lg-12">
+					<div class="heading text-center">
+						<h3 class="main-heading margin-top-20 margin-bottom-10">Generated Regex</h3>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-12 col-lg-12">
+					<textarea style="width: 100%; margin-top: 20px" rows="3" cols="50" readonly id="textarea_regex">{{ regexGenerated }}</textarea>
+				</div>
+				<div class="col-sm-12 col-md-12 col-lg-12">
+					<button type="button" class="btn btn-light" onclick="copy()">Copy To Clipboard</button>
+					<button type="button" class="btn btn-info"><a href="https://regexr.com/" target="_blank" style="color: #fff;text-decoration:none">Validate On Regxr</a></button>
+					<button type="button" class="btn btn-warning" onclick="validate()">Validate Here</button>
+
 				</div>
 			</div>
 		</div>
@@ -60,15 +100,17 @@
 </body>
 </html>
 {% endblock %}
-
 {% block scripts %}
-<!-- Super retains existing code already present in block e.g script block here -->
 {{ super() }}
 <script>
 	function copy() {
-  		let textarea = document.getElementById("textarea");
+  		let textarea = document.getElementById("textarea_regex");
   		textarea.select();
   		document.execCommand("copy");
+}
+function validate() {
+  		let textarea = document.getElementById("textarea_original");
+  		textarea.select();
 }
 </script>
 {% endblock %}
