pushing under maintenance

--- a/templates/StringForm.html
+++ b/templates/StringForm.html
@@ -109,8 +109,9 @@
   		document.execCommand("copy");
 }
 function validate() {
-  		let textarea = document.getElementById("textarea_original");
-  		textarea.select();
+  		//let textarea = document.getElementById("textarea_original");
+  		//textarea.select();
+  		alert("This future will be live soon.")
 }
 </script>
 {% endblock %}
