pushing under maintenance

--- a/templates/StringForm.html
+++ b/templates/StringForm.html
@@ -111,7 +111,7 @@
 function validate() {
   		//let textarea = document.getElementById("textarea_original");
   		//textarea.select();
-  		alert("This future will be live soon.")
+  		alert("This feature will be live soon.")
 }
 </script>
 {% endblock %}
