--- a/templates/StringForm.html
+++ b/templates/StringForm.html
@@ -39,6 +39,7 @@
 			margin-bottom: 20px;
 			/* change nav bg color */
 			background: #212121;
+			height:100px;
 		}
 		.pt-50{
 			padding-top: 20px;
@@ -50,6 +51,7 @@
 			position:absolute;
 			bottom:0;
 			width:100%;
+			height:90px;
 		}
 		.footer-heading{
 			display: block;
@@ -75,7 +77,7 @@
 						<form method="post">
 							<div class="row">
 								<div class="col-sm-12 col-md-12 col-lg-12">
-									<div class="form-group">
+									<div class="form-group" style="margin-top:15px">
 										<label for="string" class="sr-only">Enter the String</label>
 										<input name="string" type="text" class="form-control" id="string"  placeholder=" Enter String here..." required/>
 									</div>
