--- a/templates/StringForm.html
+++ b/templates/StringForm.html
@@ -4,6 +4,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+	<base target="_parent">
     <title>RegGenerator</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
@@ -24,8 +25,8 @@
 			margin-bottom: 0px;
 			padding: 20px;
 		}
-		.margin-top-20{
-			margin-top: 20px;
+		.margin-top-5{
+			margin-top: 5px;
 		}
 		.nav-heading{
 			display: block;
@@ -42,13 +43,13 @@
 			height:100px;
 		}
 		.pt-50{
-			padding-top: 20px;
+			padding-top: 2px;
 		}
 		.reg-nav-footer{
 			margin-top: 20px;
 			/* change footer bg color */
 			background: #212121;
-			position:absolute;
+			/* position:absolute; */
 			bottom:0;
 			width:100%;
 			height:90px;
@@ -83,8 +84,8 @@
 									</div>
 								</div>
 								<div class="col-sm-12 col-md-12 col-lg-12">
-									<button type="submit" class="btn btn-success" name="normal_regex"  value="normal_regex">Normal Regex</button>
-									<button type="submit" class="btn btn-primary" name="normal_regex" value="myra_regex">Myra Regex</button>
+									<button type="submit" class="btn btn-success" name="regex"  value="regex">Generate Regex</button>
+									<!--<button type="submit" class="btn btn-primary" name="normal_regex" value="myra_regex">Myra Regex</button>-->
 								</div>
 							</div>
 						</form>
@@ -102,24 +103,41 @@
 				<div class="row">
 					<div class="col-sm-12 col-md-12 col-lg-12">
 						<div class="heading text-center">
-							<h3 class="main-heading margin-top-20 margin-bottom-10">Original String</h3>
+							<h3 class="main-heading margin-top-5 margin-bottom-10">Original String</h3>
 						</div>
 					</div>
 					<div class="col-sm-12 col-md-12 col-lg-12">
-						<textarea style="width: 100%;" rows="3" cols="50" readonly id="textarea_original">{{ originalString }}</textarea>
+						<textarea style="width: 100%;" rows="3" cols="50" readonly id="textarea_string">{{ originalString }}</textarea>
+					</div>
+					<div class="col-sm-12 col-md-12 col-lg-12 pt-50">
+						<button type="button" class="btn btn-primary" onclick="copyString()">Copy To Clipboard</button>
 					</div>
 					<div class="col-sm-12 col-md-12 col-lg-12">
 						<div class="heading text-center">
-							<h3 class="main-heading margin-top-20 margin-bottom-10">Generated Regex</h3>
+							<h3 class="main-heading margin-top-5 margin-bottom-10">Normal Regex</h3>
 						</div>
 					</div>
 					<div class="col-sm-12 col-md-12 col-lg-12">
-						<textarea style="width: 100%;" rows="3" cols="50" readonly id="textarea_regex">{{ regexGenerated }}</textarea>
+						<textarea style="width: 100%;" rows="3" cols="50" readonly id="textarea_normal">{{ normalRegex }}</textarea>
 					</div>
 					<div class="col-sm-12 col-md-12 col-lg-12 pt-50">
-						<button type="button" class="btn btn-light" onclick="copy()">Copy To Clipboard</button>
+						<button type="button" class="btn btn-primary" onclick="copyNormal()">Copy To Clipboard</button>
 						<button type="button" class="btn btn-info"><a href="https://regexr.com/" target="_blank" style="color: #fff;text-decoration:none">Validate On Regxr</a></button>
 						<button type="button" class="btn btn-warning" onclick="validate()">Validate Here</button>
+					</div>
+					<div class="col-sm-12 col-md-12 col-lg-12">
+						<div class="heading text-center">
+							<h3 class="main-heading margin-top-5 margin-bottom-10">Myra Regex</h3>
+						</div>
+					</div>
+					<div class="col-sm-12 col-md-12 col-lg-12">
+						<textarea style="width: 100%;" rows="3" cols="50" readonly id="textarea_regex">{{ myraRegex }}</textarea>
+					</div>
+					<div class="col-sm-12 col-md-12 col-lg-12 pt-50">
+						<button type="button" class="btn btn-primary" style="margin-top:0px" onclick="copyMyra()">Copy To Clipboard</button>
+					</div>
+					<div class="col-sm-12 col-md-12 col-lg-12" id="insertIFrame" style="padding-top:20px">
+
 					</div>
 				</div>
 			</div>
@@ -136,15 +154,42 @@
 {% block scripts %}
 {{ super() }}
 <script>
-	function copy() {
+	function copyMyra() {
   		let textarea = document.getElementById("textarea_regex");
   		textarea.select();
   		document.execCommand("copy");
 }
-function validate() {
-  		//let textarea = document.getElementById("textarea_original");
-  		//textarea.select();
-  		alert("This feature will be live soon.")
+	function copyNormal() {
+  		let textarea = document.getElementById("textarea_normal");
+  		textarea.select();
+  		document.execCommand("copy");
+}
+	function copyString() {
+  		let textarea = document.getElementById("textarea_string");
+  		textarea.select();
+  		document.execCommand("copy");
+}
+<!--function validate() {-->
+  		<!--//let textarea = document.getElementById("textarea_original");-->
+  		<!--//textarea.select();-->
+  		<!--alert("This feature will be live soon.")-->
+<!--}-->
+function validate(){
+if (!$.trim($("#textarea_normal").val())) {
+alert("Ahaaa! You can't validate empty Regex");
+}
+else{
+document.getElementById("insertIFrame").innerHTML =
+'<div class="col-sm-12 col-md-12 col-lg-12"><div class="heading text-center"><h3 class="main-heading margin-top-5 margin-bottom-10">Test Your Regex Here</h3></div></div><iframe id="loadRegexWeb" data-src="http://regexstorm.net/tester" src="about:blank" width="100%" height="500px" style="background:#ffffff"></iframe>';
+ loadRegexValidator()
+}
+}
+	function loadRegexValidator() {
+    var iframe = $("#loadRegexWeb");
+    iframe.attr("src", iframe.data("src"));
+}
+if (!$.trim($("#textarea_normal").val())) {
+    // textarea is empty or contains only white-space
 }
 </script>
 {% endblock %}
