changed footer to crawler support

--- a/templates/StringForm.html
+++ b/templates/StringForm.html
@@ -123,7 +123,7 @@
 					<div class="col-sm-12 col-md-12 col-lg-12 pt-50">
 						<button type="button" class="btn btn-primary" onclick="copyNormal()">Copy To Clipboard</button>
 						<button type="button" class="btn btn-info"><a href="https://regexr.com/" target="_blank" style="color: #fff;text-decoration:none">Validate On Regxr</a></button>
-						<button type="button" class="btn btn-warning" onclick="validate()">Validate Here</button>
+						<button type="button" class="btn btn-warning" onclick="validate()" hidden>Validate Here</button>
 					</div>
 					<div class="col-sm-12 col-md-12 col-lg-12">
 						<div class="heading text-center">
@@ -144,7 +144,7 @@
 		</div>
 		<nav class="navbar navbar-expand-sm reg-nav-footer">
 			<div class="footer-heading">
-				Team ST
+				Team Crawler Support
 			</div>
 		</nav>
 	</div>
